{
    "name": "PlayerInputSet",
    "maps": [
        {
            "name": "Player",
            "id": "a3617260-7b0b-4e2d-9bf2-e20336e0649e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8880f38d-3a33-4617-9106-11ca700bd21b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "24a48572-3823-4626-9718-d158c8ee4a73",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "b4ca120d-7a86-4c1a-9fe8-6fb88777c256",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "58b9561e-cd2f-4c18-9e05-ec1c7e43feae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CounterAttack",
                    "type": "Button",
                    "id": "6ff9f858-6808-46ab-8cb7-3ea42cc55405",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell",
                    "type": "Button",
                    "id": "897f38e8-6742-499e-a16a-9d904a4aea24",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RangeAttack",
                    "type": "Button",
                    "id": "b2d16b78-dda1-4796-ad65-2925ccad4b0b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "13d2008a-dfe5-4dd2-8840-8811c1b5914d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UltimateSpell",
                    "type": "Button",
                    "id": "a513d136-6283-4e7f-878f-383ada41941c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "324d8dd1-8c92-4c60-9a4f-15f13bacfb3f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickItemSlot1",
                    "type": "Button",
                    "id": "cff1dffc-fdb3-4670-b142-d83f7ecc8799",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickItemSlot2",
                    "type": "Button",
                    "id": "de465ad9-a305-4c68-a4ca-39e1bf7e74a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "8537af0a-2c37-4bea-925c-d4361a16e3c8",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4e27ecee-602d-481c-a66a-7c20c168ad98",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7b6efa59-9072-4b72-a3e5-5b2d183b0841",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "95fa68af-d422-45a8-8610-382ab153035b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "048a23d5-45ac-4396-8dcc-e0a6c68f0b06",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0835273b-ad07-4de7-ac2f-7de4caf482dd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a33314df-27f9-47e3-80c6-54c62fe40bd0",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cf52ea6-36e0-43ae-985d-df0c03e5d927",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd57e194-4030-4038-8603-4b0f544fa95a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "CounterAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffde56c3-4825-4e7c-87b3-899aa12c8c0b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Spell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7876dc90-2ecc-4fe0-a837-aaba1c1f610a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "RangeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1526b7bb-ae84-4d96-a6e4-63acf7e9e505",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d86e66b2-8865-489d-88d6-801f2c28efc4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "UltimateSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25e270c3-348a-46a8-8329-db27c752a709",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f13635e-fadf-42cc-9d2b-9041b6579e8e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "QuickItemSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6b3063d-d76c-4114-bd9d-33c6cd18df88",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "QuickItemSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "99484d12-1e2c-42d9-a0e8-9cafc4e306d5",
            "actions": [
                {
                    "name": "ToggleOptionsUI",
                    "type": "Button",
                    "id": "770a7146-61ae-42e4-87a2-871cddcddf32",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleCharacterUI",
                    "type": "Button",
                    "id": "d5065285-1b30-48e9-907f-8f5dfe467234",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSkillTreeUI",
                    "type": "Button",
                    "id": "ffc59ebc-bd4a-46cb-b20d-e7341c9c56c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AlternativeInput",
                    "type": "Button",
                    "id": "63c33b7a-f0b7-43f5-a58d-f0d96151eb4a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DialogueUI_Interaction",
                    "type": "Button",
                    "id": "c689012b-78c4-4558-a479-df7b299cd532",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DialogueNavigation",
                    "type": "Button",
                    "id": "98dc7c03-0e8b-4afa-9726-7c9b8d97952d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6bd468a1-6085-477e-ab21-2cb691baabd7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "ToggleOptionsUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7291ba17-18ec-428e-b2d0-d044913383a0",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "ToggleCharacterUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2719e373-cf2e-4c01-9538-0ffd82e9e5b3",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "ToggleSkillTreeUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20c0e832-f01d-407d-8f72-4067b2834e55",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "AlternativeInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "120eaa55-45f4-4005-8283-94fc2f3a2c96",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "DialogueUI_Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "e9071aa2-ebd3-4abc-a69a-329a49c0b901",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DialogueNavigation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "317d44a8-6101-4b26-91b9-5e0e3f87dcbf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "DialogueNavigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d9b960fd-c15e-4819-83f0-8a551694aba0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keybord + Mouse",
                    "action": "DialogueNavigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keybord + Mouse",
            "bindingGroup": "Keybord + Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}